Bug 88784 - DOCX import crash on particular file
Summary: DOCX import crash on particular file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.2.2 release
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.7
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-01-24 21:58 UTC by Victor Porton
Modified: 2015-02-09 16:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The file which causes LibreOffice crash (108.36 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-01-24 21:58 UTC, Victor Porton
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Porton 2015-01-24 21:58:57 UTC
Created attachment 112784 [details]
The file which causes LibreOffice crash

`soffice A5_Style_Guide.docx` crashes.

The file is attached.
Comment 1 retired 2015-01-24 22:21:35 UTC
OSX 10.10.1, LO 4.4.2 + 4.5 nightly from yesterday both open and display the file correctly without any crash or hickup. linux only maybe?
Comment 2 Adolfo Jayme Barrientos 2015-01-25 08:53:51 UTC
Please provide steps to reproduce the issue. I’ve tested the file with LibreOffice 4.4.0.2 under Ubuntu 15.04 and did not experience any crash. You can also try updating your LibreOffice installation to 4.4.0.3 (out in a few hours!) and cleaning your user profile as described in https://wiki.documentfoundation.org/UserProfile

Thanks in advance for your feedback!
Comment 3 MM 2015-01-25 15:54:23 UTC
No crash with v4.3.5.2 and 4.3.6.1 under windows 7 x64, but a 'general input/output error'
Confirmed with v4.3.6.1 under mint 17.1 x64.
Doesn't crash under mint with the 4.2.8.2 or 4.4.0.2. So seems already fixed for the 4.4 branch and higher.
Comment 4 Caolán McNamara 2015-02-08 20:42:59 UTC
I can tell that the 4.3 series got broken with commit bcbeac44ca54f41fb80a027214b9eb2ec1eb14dd
Comment 5 Caolán McNamara 2015-02-08 20:58:49 UTC
I believe that master had this bug fixed between  1964870db4ad1e4334e8fc5050795469dc1fb05e..8cf6ba8a28f2c22817e94185121190f082c75754 so backporting something from that range would fix this
Comment 6 Caolán McNamara 2015-02-09 09:09:06 UTC
was fixed by 04fe5e6a31c9701177a744bbc8a53b2f664fe71c, so backport to 4-3 for review as https://gerrit.libreoffice.org/#/c/14377/

Marking this as resolved now
Comment 7 Michael Stahl 2015-02-09 16:47:24 UTC
indeed looks like a regression in 4.3.2.2, worked in 4.3.1.2
Comment 8 Commit Notification 2015-02-09 16:50:32 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d522ecb71ed1c5cb8472eee0b3bbd6a5fe6fed3e&h=libreoffice-4-3

Resolves: fdo#88784 crash on loading certain docx

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.