Resolves: fdo#88784 crash on loading certain docx

was/also:

fdo#82114 RTF import: fix handling of first page in non-first section

(cherry picked from commit 04fe5e6a31c9701177a744bbc8a53b2f664fe71c)

Change-Id: If06c6bcdda97447e6014223d997c7ff8abd64b48